@@ -1,3 +1,6 @@
+4-14-19
+- finished implementing signal settings
+
 4-11-19
 - finished implementing readline tab completion/new command completion system
 
